--- a/CSS Intermediete/css_blog_ex.css
+++ b/CSS Intermediete/css_blog_ex.css
@@ -1,4 +1,34 @@
 body {
-
-	
+border: 20px solid #bdc3c7;
+padding: 20px;
+max-width: 700px;
+width:80%;
+margin: 20px auto;
+font-family: source sans pro;
 }
+
+.date {
+	text-transform: uppercase;
+	letter-spacing: 0.2rem;
+	color: #3498db;
+}
+
+h2 {
+	font-weight: 700;
+	font-size: 2.0rem;
+	color: #2c3e50;
+}
+
+.p1 {
+	border-left: 5px solid #bdc3c7;
+	padding: 5px;
+}
+
+hr {
+	border-top: 1px solid #bdc3c7;
+}
+
+.post {
+	margin-bottom: 20px;
+}
+
