--- a/color-game/colorGame.css
+++ b/color-game/colorGame.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: #232323
 }
@@ -19,9 +20,14 @@ h1 {
 }
 
 
-#stripe{
+#stripe {
     background-color: white;
     height: 30px;
     text-align: center;
     color: black;
+}
+
+
+.selected {
+    background: blue
 }
