--- a/color-game/colorGame.css
+++ b/color-game/colorGame.css
@@ -1,22 +1,39 @@
 
 body {
-    background-color: #232323
+    background-color: #232323;
+    margin: 0;
+    font-family: "Fjalla One", sans-serif;
 }
 
 .square {
     width: 30%;
-    background-color: green;
+    background-color: steelblue;
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 50%;
+    transition: background 0.6s;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 #container {
-    margin: 0 auto;
+    margin: 20px auto;
     max-width: 600px;
 }
 
 h1 {
+    text-align: center;
+    /* line-height: 1.1; */
     color: white;
+    background: steelblue;
+    margin: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    padding: 20px 0;
+}
+
+#rgbDisplay { 
+    font-size: 200%;
 }
 
 
@@ -27,7 +44,44 @@ h1 {
     color: black;
 }
 
+#message {
+display: inline-block;
+width: 20%;
+color: steelblue;
+text-transform: uppercase;
+font-family: "Fjalla One", sans-serif;
+font-weight: 700;
+border: none;
+background: none;
+font-weight: lighter;
+}
+
 
 .selected {
-    background: blue
+    background: steelblue;
+    color: white;
+}
+
+
+button {
+    border: none;
+    background: none;
+    height: 100%;
+    text-transform: uppercase;
+    font-family: "Fjalla One", sans-serif;
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 2px;
+    font-size: inherit;
+    font-weight: lighter;
+    transition: all 0.3s;
+    -webkit-transition: background 0.3s;
+    -moz-transition: background 0.3s;
+    outline: none;
+    
+}
+
+button:hover {
+    background: steelblue;
+    color: white;
 }
